# discord-activity-role-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  blacklist.edn  config.edn  db.csv  db.edn  docker-compose.yml  guild_games_roles_default.json  project.clj
.github/workflows/: sync-db.yml
src/: config_handler.rs  discord_utils.rs  event_handler.rs  github_handler.rs  main.rs  rules_handler.rs
src/discord_activity_role_bot/: core.clj  handle_db.clj  handle_messages.clj  handle_presence.clj  lazy_null.clj  state.clj
src/events/: lazy_null.rs  mod.rs  presence.rs
src/interactions/: command.rs
