[package]
name = "discord-activity-role-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
governor = "0.10.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = { version = "0.16.0", features = ["simd-json", "zlib-simd"] }
twilight-gateway-queue = "0.16.0"
twilight-http = "0.16.0"
twilight-mention = "0.16.0"
twilight-model = "0.16.0"
twilight-standby = "0.16.0"
twilight-util = "0.16.0"
